<?xml version="1.0"?>
<package format="2">
  <name>drone_control_fb_slam</name>
  <version>0.0.0</version>
  <description>The drone_control_fb_slam</description>
  
  <maintainer email="loquercio@ifi.uzh.ch">Antonio Loquercio</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>quad_cmake</depend>
  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>
  
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    
  </export>
</package>